# tauri-plugin-iap

./: .gitignore  .prettierignore  Cargo.toml  README.md  build.rs  codecov.yml  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: build-demo.yml  checks.yml  publish.yml  tests.yml
android/: .gitignore  build.gradle.kts  consumer-rules.pro  settings.gradle
android/src/androidTest/java/app/tauri/iap/: IapPluginInstrumentedTest.kt
android/src/main/java/app/tauri/iap/: IapPlugin.kt
android/src/test/java/app/tauri/iap/: IapPluginTest.kt
examples/iap-demo/: package.json  pnpm-lock.yaml
examples/iap-demo/src/: App.svelte
examples/iap-demo/src-tauri/: Cargo.toml  tauri.conf.json
examples/iap-demo/src-tauri/src/: lib.rs  main.rs
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: main.js
examples/tauri-app/src-tauri/: Cargo.toml  build.rs
guest-js/: index.test.ts  index.ts
ios/: .gitignore  Package.swift
ios/Sources/: IapPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift  TestProducts.storekit
macos/: .gitignore  Package.swift
macos/Sources/: IapPlugin.swift
macos/Tests/PluginTests/: MockFFI.swift  PluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: consume_purchase.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  listeners.rs  macos.rs  mobile.rs  models.rs  windows.rs
