[package]
name = "tauri-plugin-iap"
version = "0.5.1"
authors = ["you"]
description = "A Tauri v2 plugin that enables In-App Purchases (IAP)"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-iap"
license = "MIT"
repository = "https://github.com/Choochmeque/tauri-plugin-iap"

[dependencies]
tauri = { version = "2.7.0" }
serde = "1.0"
serde_json = "1.0"
thiserror = "2"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
swift-bridge = { version = "0.1", features = ["async"], git = "https://github.com/chinedufn/swift-bridge", rev = "82b0885"}

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Foundation",
    "Foundation_Collections",
    "Services_Store",
    "System",
] }
windows-collections = "0.2"

[build-dependencies]
tauri-plugin = { version = "2.3.0", features = ["build"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-bridge-build = { version = "0.1", git = "https://github.com/chinedufn/swift-bridge", rev = "82b0885" }