[package]
name = "tauri-plugin-iap"
version = "0.10.0-rc.7"
authors = ["You"]
description = "A Tauri v2 plugin that enables In-App Purchases (IAP)"
edition = "2024"
rust-version = "1.90"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-iap"
license = "MIT"
repository = "https://github.com/Choochmeque/tauri-plugin-iap"
categories = ["api-bindings"]
keywords = ["tauri", "tauri-plugin", "iap", "in-app-purchase", "billing"]

[dependencies]
# 2.11.4 pins `time` below 0.3.52 so the transitive `cookie 0.18.1` keeps
# compiling; 2.11.3 lets `time 0.3.52` resolve and breaks the build.
tauri = { version = "2.11.4" }
serde = "1.0"
serde_json = "1.0"
thiserror = "2"
log = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
swift-bridge = { version = "0.1", features = ["async"] }

[target.'cfg(target_os = "windows")'.dependencies]
base64 = "0.22"
nt-time = { version = "0.15", default-features = false, features = ["std"] }
windows = { version = "0.61", features = [
    "Foundation",
    "Foundation_Collections",
    "Services_Store",
    "System",
] }
windows-collections = "0.3"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-bridge-build = "0.1"
