[package]
name = "iap-demo"
version = "0.1.0"
description = "IAP Plugin Demo App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "iap_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", default-features = false , features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-iap = { path = "../../../" }

